--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "gigachat (>=0.1.37.post1,<0.2.0)",
-    "telebot (>=0.0.5,<0.0.6)"
+    "telebot (>=0.0.5,<0.0.6)",
+    "pydantic-settings (>=2.9.1,<3.0.0)"
 ]
 
 
